# cpp-googletest-cmake-example

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md
cmd/: .gitignore  CMakeLists.txt  main.cpp  main_test.cpp
proxy/: .gitignore  CMakeLists.txt
proxy/src/proxy/: MyClass.cpp  MyClass.h
src/: main.cpp
